结构变更取消logic处理层

--- a/beginner_admin/BeginnerAdmin/navbar.html
+++ b/beginner_admin/BeginnerAdmin/navbar.html
@@ -325,10 +325,10 @@
 				});
 				navbar.render();
 				navbar.on('click(demo)', function(data) {
-					console.log(data.elem);
-					console.log(data.field.title);
-					console.log(data.field.icon);
-					console.log(data.field.href);
+//					console.log(data.elem);
+//					console.log(data.field.title);
+//					console.log(data.field.icon);
+//					console.log(data.field.href);
 					layer.msg(data.field.href);
 				});
 			});
