--- a/beginner_admin/BeginnerAdmin/table.html
+++ b/beginner_admin/BeginnerAdmin/table.html
@@ -180,9 +180,9 @@
 								var form = layui.form();
 								form.render();
 								form.on('submit(edit)', function(data) {
-									console.log(data.elem) //被执行事件的元素DOM对象，一般为button对象
-									console.log(data.form) //被执行提交的form对象，一般在存在form标签时才会返回
-									console.log(data.field) //当前容器的全部表单字段，名值对形式：{name: value}
+//									console.log(data.elem) //被执行事件的元素DOM对象，一般为button对象
+//									console.log(data.form) //被执行提交的form对象，一般在存在form标签时才会返回
+//									console.log(data.field) //当前容器的全部表单字段，名值对形式：{name: value}
 									//调用父窗口的layer对象
 									layerTips.open({
 										title: '这里面是表单的信息',
